# mcp-image-gen

./: README.md  pyproject.toml
src/image_gen/: __init__.py  server.py
